--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -156,21 +156,61 @@ body {
   justify-content: center;
 }
 
+.remove-menu {
+  display: flex;
+  animation: slide-out-bottom;
+  animation-duration: 0.5s;
+}
+
+.slide-out-bottom {
+  -webkit-animation: slide-out-bottom 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+  animation: slide-out-bottom 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+}
+
+@-webkit-keyframes slide-out-bottom {
+  0% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
+  }
+
+  100% {
+    -webkit-transform: translateY(-150px);
+    transform: translateY(-150px);
+    opacity: 0;
+  }
+}
+
+@keyframes slide-out-bottom {
+  0% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
+  }
+
+  100% {
+    -webkit-transform: translateY(-150px);
+    transform: translateY(-150px);
+    opacity: 0;
+  }
+}
+
 .toggle-menu {
   display: flex;
-  animation: slide-in-bottom;
-  animation-duration: 1.5s;
+  animation: slide-in-top;
+  animation-duration: 0.5s;
 }
 
-.slide-in-bottom {
-  -webkit-animation: slide-in-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-  animation: slide-in-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+.slide-in-top {
+
+  -webkit-animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: slide-in-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
-@-webkit-keyframes slide-in-bottom {
+@-webkit-keyframes slide-in-top {
   0% {
-    -webkit-transform: translateY(500px);
-    transform: translateY(500px);
+    -webkit-transform: translateY(-150px);
+    transform: translateY(-150px);
     opacity: 0;
   }
 
@@ -181,10 +221,10 @@ body {
   }
 }
 
-@keyframes slide-in-bottom {
+@keyframes slide-in-top {
   0% {
-    -webkit-transform: translateY(500px);
-    transform: translateY(500px);
+    -webkit-transform: translateY(-150px);
+    transform: translateY(-150px);
     opacity: 0;
   }
 
